--- a/src/stylesheets/animations/_bounce.scss
+++ b/src/stylesheets/animations/_bounce.scss
@@ -5,21 +5,21 @@
   85%,
   100% {
     animation-timing-function: cubic-bezier(.2, .55, .3, 1);
-    transform: translateY(0);
+    transform: translate3d(0, 0, 0);
   }
 
   45%,
   50% {
     animation-timing-function: cubic-bezier(.8, .1, .9, .1);
-    transform: translateY(-25px);
+    transform: translate3d(0, -25px, 0);
   }
 
   75% {
     animation-timing-function: cubic-bezier(.8, .1, .9, .1);
-    transform: translateY(-15px);
+    transform: translate3d(0, -15px, 0);
   }
 
-  90% { transform: translateY(-5px); }
+  90% { transform: translate3d(0, -5px, 0); }
 }
 
 .cb-bounce {
